menambahkan class animate css pada tag nav dan main

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- nav start -->
-    <nav>
+    <nav class="animate__animated animate__fadeInDown">
       <div class="container px-10 py-6 flex justify-between">
         <div class="p-4">
           <img src="../image/logo/png/logo-no-background.png" alt="logo" class="h-12 block" />
@@ -30,7 +30,7 @@
     <!-- nav end -->
 
     <!-- main start -->
-    <main>
+    <main class="animate__animated animate__fadeIn">
       <!-- section-1 start -->
       <div class="px-6 mb-[120px] mt-12 md:grid md:grid-cols-2 md:gap-x-2 lg:px-[85px] xl:px-[107px] xl:flex flex-row xl:mb-[240px]">
         <div class="xl:w-1/2 xl:relative">
