mengubaha link href script slick slider

--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
 
     <!-- footer end -->
 
-    <script type="text/javascript" src="../src/code.jquery.com_jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="../src/code.jquery.com_jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="../node_modules/slick-carousel/slick/slick.min.js"></script>
+    <script type="text/javascript" src="src/code.jquery.com_jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="src/code.jquery.com_jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="node_modules/slick-carousel/slick/slick.min.js"></script>
     <script type="text/javascript">
       $(document).ready(function () {
         $(".carousel").slick({
